fix: fix content width to be max 120ch but allow for smaller sizes on smaller screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -166,5 +166,6 @@
 }
 
 .w-content {
-  width: 120ch;
+  max-width: 120ch;
+  width: 100%;
 }
